Fixing IE11 search page layout problems (#7660)
* Change search page grid structure

* Change widget grid layout regarding IE11 support

* Remove not needed max width for RefreshControls

* Add grid fallback for widget edit modal

* Define viewBox for logo svg

* Update screenshots

* Disable styelint vendor prefix check for grid specific values and properties

* Fix linting

* Add grid fallback for aggregation controls

* Fixing flow error

* Display search page search area with fixed width when opening sidebar

* Remove redundant style attribute

--- a/graylog2-web-interface/src/views/components/datatable/DataTable.css
+++ b/graylog2-web-interface/src/views/components/datatable/DataTable.css
@@ -1,12 +1,21 @@
 :local(.container) {
+    height: 100%;
     /* The grid prop is a workaround to fix
      * horizontal scrolling for safari */
     display: grid;
-    height: 100%;
+    display: -ms-grid;
+    grid-template-rows: 1fr;
+    -ms-grid-rows: 1fr;
+    grid-template-columns: 1fr;
+    -ms-grid-columns: 1fr;
 }
 
 :local(.scrollContainer) {
     overflow: auto;
+    grid-row: 1;
+    -ms-grid-row: 1;
+    grid-column: 1;
+    -ms-grid-column: 1;
 }
 
 :local(.leftAligned) {
